5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4163/executions/1664_2974.log
== TEST (2019-04-16 10:21:02) 
-- CODE:
#a = int(input("quantidade de acai: "))
#b = int(input("quantidade de salgados: "))
#c = float(input("o valor pago: "))
 
x = 24 / 5
print(x)
-- OUTPUT:
4.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:38:04) 
-- CODE:
a = int(input("quantidade de acai: "))
b = int(input("quantidade de salgados: "))
c = float(input("o valor pago: "))

k1= float(24)
s = float(3)
d = 24/5 

total = d + b*s
print(total)
 


-- OUTPUT:
7.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:41:43) 
-- CODE:
a = int(input("quantidade de acai: "))
b = int(input("quantidade de salgados: "))
c = float(input("o valor pago: "))

k1= float(24)
s = float(3)
d = 24/5 

total = d + b*s
if total < c:
	msg = "Sim" 
else:
	msg = "Nao"
	
print(total)
print(msg)


-- OUTPUT:
7.8
Sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:41:57) 
-- CODE:
a = int(input("quantidade de acai: "))
b = int(input("quantidade de salgados: "))
c = float(input("o valor pago: "))

k1= float(24)
s = float(3)
d = 24/5 

total = d + b*s
if total < c:
	msg = "Sim" 
else:
	msg = "Nao"
	
print(total)
print(msg)


-- EXECUTION TIME:
0.144323
-- TEST CASE 1:
---- input:
500
1
50
---- correct output:
15.0
Sim
---- user output:
7.8
Sim
-- TEST CASE 2:
---- input:
0
2
10
---- correct output:
6.0
Sim
---- user output:
10.8
Nao
-- TEST CASE 3:
---- input:
200
0
4.8
---- correct output:
4.8
Nao
---- user output:
4.8
Nao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:43:30) 
-- CODE:
a = int(input("quantidade de acai: "))
b = int(input("quantidade de salgados: "))
c = float(input("o valor pago: "))

k1= float(24)
s = float(3)
 

total = k1/a + b*s
if total < c:
	msg = "Sim" 
else:
	msg = "Nao"
	
print(total)
print(msg)


-- OUTPUT:
3.048
Sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:43:55) 
-- CODE:
a = int(input("quantidade de acai: "))
b = int(input("quantidade de salgados: "))
c = float(input("o valor pago: "))

k1= float(24)
s = float(3)
 

total = k1/a + b*s
if total < c:
	msg = "Sim" 
else:
	msg = "Nao"
	
print(total)
print(msg)


-- EXECUTION TIME:
0.171252
-- TEST CASE 1:
---- input:
500
1
50
---- correct output:
15.0
Sim
---- user output:
3.048
Sim
-- TEST CASE 2:
---- input:
0
2
10
---- correct output:
6.0
Sim
---- user output:

-- TEST CASE 3:
---- input:
200
0
4.8
---- correct output:
4.8
Nao
---- user output:
0.12
Sim
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:45:27) 
-- CODE:
a = int(input("quantidade de acai: "))
b = int(input("quantidade de salgados: "))
c = float(input("o valor pago: "))

k1= float(240)
s = float(3)


total = k1/a + b*s
if total < c:
	msg = "Sim" 
else:
	msg = "Nao"
	
print(total)
print(msg)


-- OUTPUT:
3.48
Sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:45:51) 
-- CODE:
a = int(input("quantidade de acai: "))
b = int(input("quantidade de salgados: "))
c = float(input("o valor pago: "))

k1= float(2400)
s = float(3)


total = k1/a + b*s
if total < c:
	msg = "Sim" 
else:
	msg = "Nao"
	
print(total)
print(msg)


-- OUTPUT:
7.8
Sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:47:30) 
-- CODE:
a = int(input("quantidade de acai: "))
b = int(input("quantidade de salgados: "))
c = float(input("o valor pago: "))

k1= float(24)
s = float(3)
d = k1/5


total =  + b*s
if total < c:
	msg = "Sim" 
else:
	msg = "Nao"
	
print(round(total, 1)
print(msg)


-- ERROR:
File "XXXX", line 17
    print(msg)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:48:04) 
-- CODE:
a = int(input("quantidade de acai: "))
b = int(input("quantidade de salgados: "))
c = float(input("o valor pago: "))

k1= float(24)
s = float(3)
d = k1/5


total =  d + b*s
if total < c:
	msg = "Sim" 
else:
	msg = "Nao"
	
print(round(total, 1)
print(msg)


-- ERROR:
File "XXXX", line 17
    print(msg)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:48:15) 
-- CODE:
a = int(input("quantidade de acai: "))
b = int(input("quantidade de salgados: "))
c = float(input("o valor pago: "))

k1= float(24)
s = float(3)
d = k1/5


total =  d + b*s
if total < c:
	msg = "Sim" 
else:
	msg = "Nao"
	
print(round(total, 1))
print(msg)


-- OUTPUT:
7.8
Sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:48:30) 
-- CODE:
a = int(input("quantidade de acai: "))
b = int(input("quantidade de salgados: "))
c = float(input("o valor pago: "))

k1= float(24)
s = float(3)
d = k1/5


total =  d + b*s
if total < c:
	msg = "Sim" 
else:
	msg = "Nao"
	
print(round(total, 1))
print(msg)


-- EXECUTION TIME:
0.208206
-- TEST CASE 1:
---- input:
500
1
50
---- correct output:
15.0
Sim
---- user output:
7.8
Sim
-- TEST CASE 2:
---- input:
0
2
10
---- correct output:
6.0
Sim
---- user output:
10.8
Nao
-- TEST CASE 3:
---- input:
200
0
4.8
---- correct output:
4.8
Nao
---- user output:
4.8
Nao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:50:34) 
-- CODE:
a = int(input("quantidade de acai: "))
b = int(input("quantidade de salgados: "))
c = float(input("o valor pago: "))

k1= float(24/5)
s = float(3)



total =  k1 + b*s
if total < c:
	msg = "Sim" 
else:
	msg = "Nao"
	
print(round(total, 1))
print(msg)


-- OUTPUT:
7.8
Sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:50:51) 
-- CODE:
a = int(input("quantidade de acai: "))
b = int(input("quantidade de salgados: "))
c = float(input("o valor pago: "))

k1= float(24/5)
s = float(3)



total =  k1 + b*s
if total < c:
	msg = "Sim" 
else:
	msg = "Nao"
	
print(round(total, 1))
print(msg)


-- EXECUTION TIME:
0.148038
-- TEST CASE 1:
---- input:
500
1
50
---- correct output:
15.0
Sim
---- user output:
7.8
Sim
-- TEST CASE 2:
---- input:
0
2
10
---- correct output:
6.0
Sim
---- user output:
10.8
Nao
-- TEST CASE 3:
---- input:
200
0
4.8
---- correct output:
4.8
Nao
---- user output:
4.8
Nao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:51:21) 
-- CODE:
a = int(input("quantidade de acai: "))
b = int(input("quantidade de salgados: "))
c = float(input("o valor pago: "))

k1= float(24/5)
s = float(3)



total =  k1 + b*s
if total < c:
	msg = "Sim" 
else:
	msg = "Nao"
	
print(round(total, 1))
print(msg)


-- OUTPUT:
7.8
Sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:51:35) 
-- CODE:
a = int(input("quantidade de acai: "))
b = int(input("quantidade de salgados: "))
c = float(input("o valor pago: "))

k1= float(24/5)
s = float(3)



total =  k1 + b*s
if total < c:
	msg = "Sim" 
else:
	msg = "Nao"
	
print(round(total, 1))
print(msg)


-- EXECUTION TIME:
0.166084
-- TEST CASE 1:
---- input:
500
1
50
---- correct output:
15.0
Sim
---- user output:
7.8
Sim
-- TEST CASE 2:
---- input:
0
2
10
---- correct output:
6.0
Sim
---- user output:
10.8
Nao
-- TEST CASE 3:
---- input:
200
0
4.8
---- correct output:
4.8
Nao
---- user output:
4.8
Nao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:52:06) 
-- CODE:
a = int(input("quantidade de acai: "))
b = int(input("quantidade de salgados: "))
c = float(input("o valor pago: "))

k1= float(24/5)
s = float(3)



total =  k1 + b*s
if total < c:
	msg = "Sim" 
else:
	msg = "Nao"
	
print(round(total, 1))
print(msg)


-- OUTPUT:
7.8
Sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:53:29) 
-- CODE:
a = int(input("quantidade de acai: "))
b = int(input("quantidade de salgados: "))
c = float(input("o valor pago: "))

k1= float(a*0.24)
s = float(3)



total =  k1 + b*s
if total < c:
	msg = "Sim" 
else:
	msg = "Nao"
	
print(round(total, 1))
print(msg)


-- OUTPUT:
123.0
Nao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:53:56) 
-- CODE:
a = int(input("quantidade de acai: "))
b = int(input("quantidade de salgados: "))
c = float(input("o valor pago: "))

k1= float(a*0.024)
s = float(3)



total =  k1 + b*s
if total < c:
	msg = "Sim" 
else:
	msg = "Nao"
	
print(round(total, 1))
print(msg)


-- OUTPUT:
15.0
Sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:54:10) 
-- CODE:
a = int(input("quantidade de acai: "))
b = int(input("quantidade de salgados: "))
c = float(input("o valor pago: "))

k1= float(a*0.024)
s = float(3)



total =  k1 + b*s
if total < c:
	msg = "Sim" 
else:
	msg = "Nao"
	
print(round(total, 1))
print(msg)


-- EXECUTION TIME:
0.303769
-- TEST CASE 1:
---- input:
500
1
50
---- correct output:
15.0
Sim
---- user output:
15.0
Sim
-- TEST CASE 2:
---- input:
0
2
10
---- correct output:
6.0
Sim
---- user output:
6.0
Sim
-- TEST CASE 3:
---- input:
200
0
4.8
---- correct output:
4.8
Nao
---- user output:
4.8
Nao
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
